sms/mail notification settings ux ipmrovment
